--- a/4-)gmail-clone/index.html
+++ b/4-)gmail-clone/index.html
@@ -11,6 +11,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
     />
+
+    <!-- Toastify -->
+     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+
   </head>
   <body>
     <!-- * Header -->
@@ -65,7 +69,7 @@
         </button>
 
         <!-- Navigation -->
-        <nav>
+        <nav class="left-aside-middle">
           <!-- Navigation Item -->
 
           <a href="#" class="active">
@@ -75,7 +79,7 @@
           <!-- Navigation Item -->
           <a href="#">
             <i class="bi bi-star"></i>
-            <span>Yıldızlananlar</span>
+            <span class="">Yıldızlananlar</span>
           </a>
           <!-- Navigation Item -->
           <a href="#">
@@ -142,17 +146,135 @@
 
         <!-- Mails Area -->
         <div class="mails-area">
-          <h1>Mails Area</h1>
+          <!-- <div class="mail">
+
+            <div class="left">
+              <input type="checkbox">
+              <i class="bi bi-star"></i>
+              <span>Furkan</span>
+            </div>
+
+            <div class="center">
+              <p class="mail-title">Title</p>
+              <p class="mail-desc">Description</p>
+
+            </div>
+
+            <div class="right">
+              <p class="mail-date">25 Myıs</p>
+              <div class="delete">
+                <i class="bi bi-trash-fill"></i>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="mail">
+
+            <div class="left">
+              <input type="checkbox">
+              <i class="bi bi-star"></i>
+              <span>Furkan</span>
+            </div>
+
+            <div class="center">
+              <p class="mail-title">Title</p>
+              <p class="mail-desc">Description</p>
+
+            </div>
+
+            <div class="right">
+              <p class="mail-date">25 Myıs</p>
+              <div class="delete">
+                <i class="bi bi-trash-fill"></i>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="mail">
+
+            <div class="left">
+              <input type="checkbox">
+              <i class="bi bi-star"></i>
+              <span>Furkan</span>
+            </div>
+
+            <div class="center">
+              <p class="mail-title">Title</p>
+              <p class="mail-desc">Description</p>
+
+            </div>
+
+            <div class="right">
+              <p class="mail-date">25 Myıs</p>
+              <div class="delete">
+                <i class="bi bi-trash-fill"></i>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="mail">
+
+            <div class="left">
+              <input type="checkbox">
+              <i class="bi bi-star"></i>
+              <span>Furkan</span>
+            </div>
+
+            <div class="center">
+              <p class="mail-title">Title</p>
+              <p class="mail-desc">Description</p>
+
+            </div>
+
+            <div class="right">
+              <p class="mail-date">25 Myıs</p>
+              <div class="delete">
+                <i class="bi bi-trash-fill"></i>
+              </div>
+            </div>
+
+          </div> -->
         </div>
       </section>
       <!-- Right Aside -->
       <aside class="right-aside">
-        <h1>Right</h1>
+        <img src="./images/calendar-48.png" alt="">
+        <img src="./images/keep-48.png" alt="">
+        <img src="./images/task-48.png" alt="">
+        <img src="./images/account-48.png" alt="">
+        <span></span>
+        <i class="bi bi-plus"></i>
       </aside>
     </main>
 
     <!-- * Modal -->
+    <div class="modal-wrapper">
+      <div class="modal-inner">
+        <i id="close-btn" class="bi bi-x-lg"></i>
+
+        <form id="mail-form">
+          <label for="who">Kime</label>
+          <input type="text" id="who">
+          <label for="subject">Konu</label>
+          <input type="text" id="subject">
+          <label for="content">İçerik</label>
+          <textarea id="content"></textarea>
+
+          <button type="submit" id="mail-form-btn">Gönder</button>
+        </form>
+
+      </div>
+
+    </div>
+
     <!-- * Js Bağlantı -->
     <script src="./js/main.js" type="module"></script>
+
+    <!-- Toastify Js -->
+     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+
   </body>
 </html>
